syntax = "proto3";

// Importing the empty.proto from the Google Protobuf library
import "google/protobuf/empty.proto";

// Setting the C# namespace for generated code
option csharp_namespace = "Services.SubModules.Protos";

// gRPC service definition for Notifications
service NotificationsGrpc {
    // Add a notification for a user
    rpc AddUserNotification (CreateUserNotificationsGrpcRequest) returns (google.protobuf.Empty);

    // Add a notification for a group
    rpc AddGroupNotification (CreateGroupNotificationsGrpcRequest) returns (google.protobuf.Empty);
}

// Request message for creating individual notifications
message CreateUserNotificationsGrpcRequest {
    // User ID for whom the notification is being created
    string userId = 1;

    // Type of the notification
    string type = 2;

    // Language for the notification
    string language = 3;

    // Notification data
    string data = 4;
}

// Request message for creating group notifications
message CreateGroupNotificationsGrpcRequest {
    // Group ID for which the notification is being created
    string groupId = 1;

    // Type of the group notification
    string type = 2;

    // Language for the notification
    string language = 3;

    // Notification data
    string data = 4;
}
